--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <p><h1>Odin Recipes</h1></p>
 
     <p><a href="recipes/falafel.html">Falafel</a></p>
+
+    <p><a href="recipes/curry.html">Curry</a></p>
+
+    <p><a href="recipes/soup.html">Soup</a></p>
 </body>
 
 </html>
