--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Curry</h1>
 
-    <p><img src="../img/curry.jpeg" height="500"></p>
+    <p><img src="https://i.pinimg.com/736x/f4/11/f4/f411f40853e1db976a43f9ff5d7fe26e.jpg" height="500"></p>
 
     <h2>Description</h2>
     <p>Here I will teach out how to make Murgh Kari</p>
